<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.finalexampracticalportion.ProfileActivity">


    <ImageView
        android:id="@+id/large_image_iv"
        android:layout_width="@dimen/LargeImageView"
        android:layout_height="@dimen/LargeImageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/LargeImage_Margin_bottom"
        android:layout_marginTop="@dimen/LargeImage_Margin_top"
        android:background="@drawable/ic_people_black_24dp" />

    <LinearLayout
        android:id="@+id/imagebutton_textview_group_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ib_tv_set1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imagebutton_one_ib"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="@dimen/imageButtonsSize"
                android:layout_marginBottom="@dimen/ImageButtons_textViewMargin"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:scaleType="fitXY"
                android:src="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/ib_one_textview_tv"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:gravity="center"
                android:text="@string/Button1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ib_tv_set2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imagebutton_two_ib"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="@dimen/imageButtonsSize"
                android:layout_marginBottom="@dimen/ImageButtons_textViewMargin"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:scaleType="fitXY"
                android:src="@drawable/ic_email_black_24dp" />

            <TextView
                android:id="@+id/ib_two_textview_tv"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:gravity="center"
                android:text="@string/Button2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ib_tv_set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imagebutton_three_ib"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="@dimen/imageButtonsSize"
                android:layout_marginBottom="@dimen/ImageButtons_textViewMargin"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:scaleType="fitXY"
                android:src="@drawable/ic_track_changes_black_24dp" />

            <TextView
                android:id="@+id/ib_three_textview_tv"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:gravity="center"
                android:text="@string/Button3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ib_tv_set4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imagebutton_four_ib"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="@dimen/imageButtonsSize"
                android:layout_marginBottom="@dimen/ImageButtons_textViewMargin"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:scaleType="fitXY"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:id="@+id/ib_four_textview_tv"
                android:layout_width="@dimen/imageButtonsSize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ImageButtons_textViewMargin"
                android:gravity="center"
                android:text="@string/Logout" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>